Increase Tomcat memory via ENV var. Remove unneeded Tomcat webapps from default distribution. Comment out package verification steps, as PGP server seems to fail every other time.